# OpenTTD

./: .gitignore  CMakeLists.txt  azure-pipelines-ci.yml
azure-pipelines/templates/: release.yml  windows-build.yml
cmake/: AutodetectEditbin.cmake  AutodetectGCCCompileFlag.cmake  AutodetectGrfcodec.cmake  AutodetectLibrary.cmake  CheckSSE.cmake  CompileFlags.cmake  DetectVersion.cmake  FindAllegro.cmake  FindCCACHE.cmake  FindCocoa.cmake  FindDirectMusic.cmake  FindDistCC.cmake  FindFontConfig.cmake  FindLZO2.cmake  FindSquirrel.cmake  FindTimidity.cmake  FindUniscribe.cmake  LinkLibrary.cmake  LinkPackage.cmake  Options.cmake  SourceList.cmake  Static.cmake
cmake/scripts/: FindVersion.cmake
media/: openttd.desktop.in
media/baseset/openttd/: CMakeLists.txt
media/baseset/orig_extra/: CMakeLists.txt
src/: CMakeLists.txt  rev.cpp.in
src/core/: enum_type.hpp
src/music/: CMakeLists.txt  dmusic.cpp
src/os/windows/: ottdres.rc.in
src/script/api/: CMakeLists.txt
src/sound/: xaudio2_s.cpp
src/video/: CMakeLists.txt
